--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,13 @@
 <h1>Create the article</h1>
 
-
+<% if @article.errors.any? %>
+<ul>
+<h2>This is the list of Erros</h2>
+<% @article.errors.full_messages.each do |msg| %>
+<li><%= msg %></li>
+<% end %>
+</ul>
+<% end %>
 <%= form_for @article do |f| %>
   <p>
   	<%= f.label :title %> <br/>
