--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,6 +17,9 @@
 	    <td>
 		<%= link_to "Show", article_path(art) %>
 	    </td>
+	    <td>
+		<%= link_to "Delete", article_path(art), method: :delete, data: {confirm: "Are you Sure?"} %>
+	    </td>
 	</tr>
 	<% end %>
 </table>
