--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,4 +1,9 @@
-<h1>This is Home Page</h1>
+
+<div class="center jumbotron">
+<h1 id="title">Humans of Khurasan</h1>
 
 
-<%= link_to 'Alpha Blog Articles', articles_path %> | <%= link_to 'About', about_path %>
+<%= link_to 'Sign Up',"#",class: "btn btn-danger  btn-lg btn-xlg"%>
+
+
+</div>
